fix: improve secondary text contrast

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -42,7 +42,7 @@
 }
 
 @mixin secondary-text-contrast {
-    color: var(--secondary);
+    color: var(--secondary-text);
 
     @media (prefers-contrast: more), (forced-colors: active) {
         color: var(--foreground);
