--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -21,6 +21,7 @@
     --primary-soft: #{$primary-soft};
 
     --secondary: #{$secondary};
+    --secondary-text: #{$secondary-text};
     --secondary-foreground: #{$secondary-foreground};
     --secondary-hover: #{$secondary-hover};
 
@@ -93,6 +94,7 @@
     --primary-soft: #{$dark-primary-soft};
 
     --secondary: #{$dark-secondary};
+    --secondary-text: #{$dark-secondary-text};
     --secondary-foreground: #{$dark-secondary-foreground};
     --secondary-hover: #{$dark-secondary-hover};
 
