--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $primary-hover: oklch(0.61 0.25 279.31);
 $primary-soft: oklch(0.5595 0.2296 279.31 / 0.1);
 
 $secondary: oklch(0.7556 0.2082 146.98);
+$secondary-text: oklch(0.46 0.13 147);
 $secondary-foreground: oklch(1 0 0);
 $secondary-hover: oklch(0.8 0.22 146.98);
 
@@ -88,6 +89,7 @@ $dark-primary-hover: oklch(0.66 0.27 279.31);
 $dark-primary-soft: oklch(0.61 0.25 279.31 / 0.2);
 
 $dark-secondary: oklch(0.7556 0.2082 146.98);
+$dark-secondary-text: oklch(0.76 0.17 147);
 $dark-secondary-foreground: oklch(1 0 0);
 $dark-secondary-hover: oklch(0.8 0.22 146.98);
 
